Enhance CarListingAnalyticsController with database-driven validation for body and fuel types
- Integrated BodyStyleService and FuelTypeService to fetch valid body and fuel type slugs from the database, replacing hardcoded validation lists.
- Updated validation methods to enforce a maximum of 10 filters for body and fuel types, improving error handling and user feedback.
- Added corresponding unit tests to ensure proper functionality and validation logic in CarListingAnalyticsControllerTest.